--- a/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -161,6 +161,10 @@ permalink: /369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
                     <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
                     <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
                   </ul>
+                <b>Node.js</b>
+        <ul>
+                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias</a></li>
+                  </ul>
                 <b>Blender 3D</b>
         <ul>
                     <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates</a></li>
