--- a/en/21_Node.js/module_alias/nexss-blog.html
+++ b/en/21_Node.js/module_alias/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
 title: ""
-permalink: /nexss-blog.html
+permalink: /en/21_Node.js/module_alias/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,7 +13,7 @@ permalink: /nexss-blog.html
 </script>
 
   <title>
-    BLOG Welcome - News
+    BLOG Node.js - Module_alias - alias
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -21,9 +21,9 @@ permalink: /nexss-blog.html
   <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="News - Nexss Programmer Blog">
+  <meta name="description" content="Module_alias - Nexss Programmer Blog">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Welcome - News">
+  <meta property="og:description" content="BLOG Node.js - Module_alias - alias">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -84,23 +84,23 @@ permalink: /nexss-blog.html
     <div class="nav clearfix">
         <ul>
             <li>
-                <a href="faq.html">FAQ</a>
+                <a href="en/faq.html">FAQ</a>
             </li>
             <li>
-                <a href="index.html#services">services</a>
+                <a href="en/index.html#services">services</a>
             </li>
             <li>
-                <a href="nexss-blog.html">blog</a>
+                <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="nexss-portfolio.html">portfolio</a>
+                <a href="en/nexss-portfolio.html">portfolio</a>
             </li>
             <li>
-                <a href="index.html#contacts">contact</a>
+                <a href="en/index.html#contacts">contact</a>
             </li>
         </ul>
         <div class="btn__wrap__center">
-            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -110,19 +110,19 @@ permalink: /nexss-blog.html
     <div class="phone_nav">
         <ul>
             <li>
-                <a href="faq.html">FAQ</a>
+                <a href="en/faq.html">FAQ</a>
             </li>
             <li>
-                <a href="index.html#services">services</a>
+                <a href="en/index.html#services">services</a>
             </li>
             <li>
-                <a href="nexss-blog.html">blog</a>
+                <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="nexss-portfolio.html">porfolio</a>
+                <a href="en/nexss-portfolio.html">porfolio</a>
             </li>
             <li>
-                <a href="index.html#contacts">contact</a>
+                <a href="en/index.html#contacts">contact</a>
             </li>
         </ul>
     </div>
@@ -154,41 +154,50 @@ permalink: /nexss-blog.html
       <div class="column1">
                 <b>Welcome</b>
         <ul>
-                    <li><a href="0_Welcome/news/nexss-blog.html">News</a></li>
+                    <li><a href="en/0_Welcome/news/nexss-blog.html">News</a></li>
                   </ul>
                 <b>Nexss Programmer</b>
         <ul>
-                    <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
-                    <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
+                    <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
+                    <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
                   </ul>
                 <b>Node.js</b>
         <ul>
-                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias</a></li>
+                    <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias</a></li>
                   </ul>
                 <b>Blender 3D</b>
         <ul>
-                    <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates</a></li>
-                    <li><a href="369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
+                    <li><a href="en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates</a></li>
+                    <li><a href="en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
                   </ul>
                 <b>Natron</b>
         <ul>
-                    <li><a href="639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
+                    <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h2>News</h2>
-<h3>April 25th, 2021</h3>
-<p>Nexss Programmer new version <b>2.2.40</b><br>
-NEW FUNCTIONALITIES ADDED: </p><ul><li><b>nexss run</b></li><li><b>nexss cache rebuild</b></li><li><b>big efficiency improvement</b></li></ul><p></p>
+        <h1>Module Alias</h1>
 <ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
-<h3>March 29th, 2021</h3></li>
+<li>package: <strong>module-alias</strong> - <a href="https://github.com/ilearnio/module-alias">https://github.com/ilearnio/module-alias</a></li>
 </ul>
-<p>Nexss Programmer new version <b>2.2.24</b><br>
-NEW LANGUAGE ADDED: <b>LiveScript</b></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.24">more</a></li>
-</ul>
+<p>Great package to cleanup/organize the includes/imports. Also is very handy to develop custom packages. Please see below. We are using the <strong>../nexsspackages</strong> folder to keep our modules outside the folder and not installing them all the time.</p>
+<pre><code class="language-sh">npm i module-alias</code></pre>
+<p>In the package.json setup aliases:</p>
+<pre><code class="language-json">// package.json
+{
+  "name": "mypackage",
+  //...
+  "_moduleAliases": {
+    "@root": ".",
+    "@nexssp": "../nexsspackages"
+  }
+}</code></pre>
+<p>In the program</p>
+<pre><code class="language-js">require("module-alias/register");
+const os = require("@nexssp/os"); // in the ../nexsspackages folder we have git repos of our modules</code></pre>
+<p>or through program</p>
+<pre><code class="language-js">const moduleAlias = require("module-alias");
+moduleAlias.addAlias("@nexssp", __dirname + "../nexsspackages");</code></pre>
       </div>
     </div>
   </div>
@@ -230,13 +239,13 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <li>
-          <a href="privacy-policy.html">Privacy Policy</a>
+          <a href="en/privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
-          <a href="terms-and-conditions.html">Terms and Conditions</a>
+          <a href="en/terms-and-conditions.html">Terms and Conditions</a>
         </li>
         <li>
-          <a href="nexss-blog.html">Blog</a>
+          <a href="en/nexss-blog.html">Blog</a>
         </li>
       </ul>
     </div>
@@ -253,7 +262,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
