--- a/en/terms-and-conditions.html
+++ b/en/terms-and-conditions.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    
+  </title>"
 permalink: /en/terms-and-conditions.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -17,8 +19,6 @@ permalink: /en/terms-and-conditions.html
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
@@ -37,9 +37,7 @@ permalink: /en/terms-and-conditions.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -209,8 +207,10 @@ permalink: /en/terms-and-conditions.html
   </div>
 </div>    
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
@@ -255,8 +255,7 @@ permalink: /en/terms-and-conditions.html
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
