--- a/pl/faq.html
+++ b/pl/faq.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    
+  </title>"
 permalink: /pl/faq.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -17,8 +19,6 @@ permalink: /pl/faq.html
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
@@ -37,9 +37,7 @@ permalink: /pl/faq.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -191,7 +189,7 @@ permalink: /pl/faq.html
                 <div class="article">
                   <div class="descr">
                     <p>
-                      It will safe you a lot of time as it contains predefined templates for each language and you can learn from them.
+                      It will safe you a lot of time as it contains predefined templates for each language and you can learn from them. All compilers are installed very quickly (depends on your os and computer speed)
                     </p>
                   </div>
                 </div>
@@ -256,7 +254,7 @@ permalink: /pl/faq.html
                 <div class="article">
                   <div class="descr">
                     <p>
-                      At the moment there is almost 50 and the list it is still growing. Languages list can be found here: <a href="https://github.com/nexssp/cli/wiki/Nexss-Programmer-Programming-Languages">Nexss Programmer Programming Languages</a>
+                      At the moment there over 50 and the list it is growing. Languages list can be found here: <a href="https://github.com/nexssp/cli/wiki/Nexss-Programmer-Programming-Languages">Nexss Programmer Programming Languages</a>
                     </p>
                   </div>
                 </div>
@@ -277,7 +275,7 @@ permalink: /pl/faq.html
                 <div class="article">
                   <div class="descr">
                     <p>
-                      There are hundreds features with free version, but:
+                      There are hundreds of features, some of them:
 </p><ul>
 <li>Compile any languages</li>
 <li>Make your own language</li>
@@ -299,8 +297,10 @@ permalink: /pl/faq.html
   </div>
 </div>    
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
@@ -345,8 +345,7 @@ permalink: /pl/faq.html
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
