--- a/programmerCommands.html
+++ b/programmerCommands.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Commands - Nexss Programmer</title>"
 permalink: /programmer.html/Commands
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
