--- a/programmerDebugging.html
+++ b/programmerDebugging.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Debugging - Nexss Programmer</title>"
 permalink: /programmer.html/Debugging
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
