--- a/programmerEnvironment.html
+++ b/programmerEnvironment.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Environment - Nexss Programmer</title>"
 permalink: /programmer.html/Environment
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
