--- a/programmerFiles---Templates.html
+++ b/programmerFiles---Templates.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Files   Templates - Nexss Programmer</title>"
 permalink: /programmer.html/Files---Templates
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
