--- a/programmerLinks.html
+++ b/programmerLinks.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Links - Nexss Programmer</title>"
 permalink: /programmer.html/Links
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
