--- a/programmerList-of-pacakges-and-examples.html
+++ b/programmerList-of-pacakges-and-examples.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>List of pacakges and examples - Nexss Programmer</title>"
 permalink: /programmer.html/List-of-pacakges-and-examples
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
