--- a/programmerNexss-Programmer-Cheat-sheet.html
+++ b/programmerNexss-Programmer-Cheat-sheet.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Nexss Programmer Cheat sheet - Nexss Programmer</title>"
 permalink: /programmer.html/Nexss-Programmer-Cheat-sheet
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
