--- a/programmerProcesses.html
+++ b/programmerProcesses.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Processes - Nexss Programmer</title>"
 permalink: /programmer.html/Processes
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
