--- a/programmerQuick-Start.html
+++ b/programmerQuick-Start.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Quick Start - Nexss Programmer</title>"
 permalink: /programmer.html/Quick-Start
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
