--- a/programmerSequences.html
+++ b/programmerSequences.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Sequences - Nexss Programmer</title>"
 permalink: /programmer.html/Sequences
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
