--- a/programmerTesting.html
+++ b/programmerTesting.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Testing - Nexss Programmer</title>"
 permalink: /programmer.html/Testing
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
