--- a/en/11_blog-nexss-programmer/introduction/nexss-blog.html
+++ b/en/11_blog-nexss-programmer/introduction/nexss-blog.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    BLOG Nexss Programmer - Introduction
+  </title>"
 permalink: /en/11_blog-nexss-programmer/introduction/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,17 +15,15 @@ permalink: /en/11_blog-nexss-programmer/introduction/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Introduction - ntroduction
+    BLOG Nexss Programmer - Introduction
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
   <meta name="description" content="Introduction - Nexss Programmer Blog">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Introduction - ntroduction">
+  <meta property="og:description" content="BLOG Nexss Programmer - Introduction">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -37,9 +37,7 @@ permalink: /en/11_blog-nexss-programmer/introduction/nexss-blog.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -218,8 +216,10 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
 </div>
     
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
@@ -264,8 +264,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
