--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    Easy Install - Free Open Source Nexss Programmer
+  </title>"
 permalink: /en/easy-install-nexss-programmer.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -17,8 +19,6 @@ permalink: /en/easy-install-nexss-programmer.html
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="free,open source,programmer tool, easy install">
   <meta name="description" content="Install Free Open Source Nexss Programmer Tool easy.">
@@ -37,9 +37,7 @@ permalink: /en/easy-install-nexss-programmer.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -147,9 +145,10 @@ permalink: /en/easy-install-nexss-programmer.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.2.40</span>
+      <span>Nexss Programmer 2.2.47</span>
       Open Source
     </div>
+    <a href="en/programmer.html" class="btn btn__green">Documentation</a>
     <div class="center" style="text-align:center;">
       <a target="_blank" class="btn btn__medium btn__green" href="https://youtu.be/z5scbto_yOMs">
         Nexss Programmer - Features Presentation</a><br><br>
@@ -157,7 +156,7 @@ permalink: /en/easy-install-nexss-programmer.html
     <div>
       <div>
         <h2>Open Source</h2>
-        <h3>Install Nexss Programmer 2.2.40 Open Source</h3>
+        <h3>Install Nexss Programmer 2.2.47 Open Source</h3>
 
         <h4>Through NPM - <b>Linux, MacOS, Windows</b></h4>
           <p style="color:#666;font-size:smaller">note: Linux and MacOS
@@ -401,8 +400,10 @@ permalink: /en/easy-install-nexss-programmer.html
   </div>
 </div>    
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
@@ -447,8 +448,7 @@ permalink: /en/easy-install-nexss-programmer.html
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
