--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    Nexss Programmer, Innovative programming solutions for your business - Nexss.com
+  </title>"
 permalink: /en/index.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -17,8 +19,6 @@ permalink: /en/index.html
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="open source,programmer,development,innovative,business">
   <meta name="description" content="Nexss.com provides innovative programming solutions for your business and Open Source tool Nexss Programmer.">
@@ -37,9 +37,7 @@ permalink: /en/index.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -136,7 +134,7 @@ permalink: /en/index.html
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.2.40
+                    Nexss Programmer 2.2.47
                 </div>
                 <div class="text_3">
                     The innovative and evolutionary tool for the programmers. <br>
@@ -155,6 +153,9 @@ permalink: /en/index.html
                     <a href="en/easy-install-nexss-programmer.html" class="btn btn__large btn__orange">Free Open Source Version</a>
                     <a href="en/nexss-programmer-features.html" class="btn btn__large btn__green">CLI
                         Tool - Features</a>
+                    <br>
+                    <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html" class="btn btn__large btn__blue">Tutorials</a>
+                    <a target="_blank" href="https://www.npmjs.com/package/@nexssp/cli" class="btn btn__large btn__yellow">NPM JS</a>
                 </div>
 
             </div>
@@ -453,8 +454,10 @@ permalink: /en/index.html
     </div>
 </div>    
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <a href="#" class="logo">
       <img src="assets/default/images/footer_logo.png" alt="">
@@ -502,8 +505,7 @@ permalink: /en/index.html
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
