--- a/nexss-programmer-features.html
+++ b/nexss-programmer-features.html
@@ -1,5 +1,7 @@
 ---
-title: ""
+title: "<title>
+    Features  - Free Open Source Nexss Programmer
+  </title>"
 permalink: /nexss-programmer-features.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -17,8 +19,6 @@ permalink: /nexss-programmer-features.html
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="robots" content="index,follow">
-  <meta name="distribution" content="Global">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="features,open source,programming tool, easy install">
   <meta name="description" content="Features of the Open Source Nexss Programmer Tool easy.">
@@ -37,9 +37,7 @@ permalink: /nexss-programmer-features.html
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
 <script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
-  <meta name="creator" content="Nexss.com">
-</head>
+  </head>
 
 <body>
   <div class="wrap">
@@ -147,7 +145,7 @@ permalink: /nexss-programmer-features.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.2.40</span>
+      <span>Nexss Programmer 2.2.47</span>
       Features
     </div>
     <a href="programmer.html" class="btn btn__green">Documentation</a>
@@ -363,8 +361,10 @@ nexss myprogram.php # compile php program</code></pre>
   </div>
 </div>    
         <!-- footer -->
-    <footer class="footer">
-       <div class="footer__top">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+     <div class="footer__top">
   <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
@@ -409,8 +409,7 @@ nexss myprogram.php # compile php program</code></pre>
   $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
   $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
-    </footer>
-  </div>
+  </footer>
 
 
 </body></html>
