--- a/programmerErrors-Solutions.html
+++ b/programmerErrors-Solutions.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Errors Solutions - Nexss Programmer</title>"
 permalink: /programmer.html/Errors-Solutions
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
