--- a/programmerServer.html
+++ b/programmerServer.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "<title>Server - Nexss Programmer</title>"
 permalink: /programmer.html/Server
 ---
 <!DOCTYPE html><html lang="en"><!--[if lt IE 7 ]> 
